--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -1,39 +1,22 @@
 version: '3.7'
 
 volumes:
-  ota_rcache:
+  driva-rcache:
     driver: local
 
 networks:
-  ota-network:
+  driva-network:
     driver: bridge
 
 services:
-  # ota-cache w/o authentication
-  ota-redis:
+  driva-redis:
     image: redis:6.2-alpine
-    container_name: ota-redis
+    container_name: driva-redis
     restart: unless-stopped
     networks:
-      - ota-network
+      - driva-network
     ports:
       - ${REDIS_PORT}:6379
     command: redis-server --save 20 1 --loglevel warning
     volumes:
-      - ota_rcache:/data
-
-  # ota-cache with authentication
-  # ota-redis-auth:
-  #   image: redis:6.2-alpine
-  #   container_name: ota-redis-auth
-  #   restart: unless-stopped
-  #   networks:
-  #     - ota-network
-  #   ports:
-  #     - ${REDIS_PORT}:6379
-  #   environment:
-  #     - REDIS_PORT=${REDIS_PORT}
-  #     - REDIS_PASSWORD=${REDIS_PASSWORD}
-  #   command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
-  #   volumes:
-  #     - ota_rcache:/data
+      - driva-rcache:/data
