--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "ioredis": "^5.3.2",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   }
 }
